--- a/public/gathers.webflow.css
+++ b/public/gathers.webflow.css
@@ -82,6 +82,32 @@
     text-transform: uppercase;
 }
 
+a {
+    font-family: Supply, sans-serif;
+    text-transform: uppercase;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.actionLink {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+.actionLink p {
+    background-color: #1e75ff;
+    margin-left: auto;
+    margin-right: auto;
+    display: inline-block;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    border-radius: 4px;
+    color: white;
+}
+
 .success-message {
     background-color: transparent;
 }
